# food-aesthetics

./: .gitignore  LICENSE  README.md  infer_score.py  pyproject.toml  raw_photographic_features.py  requirements.txt  run.py  setup.py  test.ipynb  tutorial.ipynb
food-aesthetics/: model.py
food_aesthetics/: model.py
output/: instructions.txt
src/: food_aesthetics.py  model.py
