[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "food-aesthetics"
authors = [
    {name = "Alessandro Gambetti", email = "gambetti.alessandro@novasbe.pt"},
]
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.5"
dynamic = ["version", "description"]
dependencies = [
    "tensorflow>=2.6",
    "numpy>=1.19.5",
    "Pillow>=7.2"
]
